add aci compute resource
