# swagger/specification/applications/resource-manager/Applications.Datastores/preview/2023-10-01-preview/openapi.json
@@ -1111,6 +1111,25 @@
     }
   },
   "definitions": {
+    "AzureContainerInstanceCompute": {
+      "type": "object",
+      "description": "The Azure container instance compute configuration",
+      "properties": {
+        "resourceGroup": {
+          "type": "string",
+          "description": "The resource group to use for the environment."
+        }
+      },
+      "required": [
+        "resourceGroup"
+      ],
+      "allOf": [
+        {
+          "$ref": "#/definitions/EnvironmentCompute"
+        }
+      ],
+      "x-ms-discriminator-value": "aci"
+    },
     "EnvironmentCompute": {
       "type": "object",
       "description": "Represents backing compute resource",
